--- a/homestyle.css
+++ b/homestyle.css
@@ -53,8 +53,10 @@ table {
 	--color-8e9 : #8e939b ;
 	--color-9a : #9a9a9a ;
 	--color-a9 : #a9a9a9 ;
+	--color-aa : #aaa ;
 	--color-6e : #6e7177 ;
 	--color-ef :#efefef;
+	--bgColor-c9 : #c9c9c9 ;
 	--color-95 : #959595 ;
 	--color-4d : #4d535b ;
 	--color-bf : #bfc5ca ;
@@ -63,6 +65,7 @@ table {
     --bg-color : #363d4d ;
 	--bgColor-f1 : #f1f1f1 ;
 	--bgColor-f8 : #f8f9fa ;
+	--bgColor-ac : #acadb1 ;
     --thirdBg-color : rgba(247,248,250,.86) ;
 	--bgColor-input : #f8f9fa ;
 	--hover-Gray : #f5f5f5 ;
@@ -834,7 +837,7 @@ a{
 	justify-content: space-between;
 }
 
-.container-common__product__title , .container-common-product__left{
+.container-common__product__title , .container-common-product__left , .container-latest-products-title__container-right{
 	display: flex;
 	align-items: center;
 }
@@ -846,7 +849,7 @@ a{
 	border-radius: var(--radius);
 }
 
-.container-common__product__title h2{
+.container-common__product__title h2 , .container-latest-products-title__container-right h2{
 	font: 1.1rem 'IranianSansBold';
 	color: #53565d;
 	word-spacing: -4px;
@@ -1302,6 +1305,122 @@ a{
 
 /* finish banner */
 
+/* start total-container-latest-products */
+
+.container-latest-products-titles .second-container{
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+
+.container-latest-products-title__container-right__container-icon{
+	background-color: rgba(142,213,87,.09);
+	width: 50px;
+	height: 50px;
+	border-radius: var(--radius);
+	margin-left: 20px;
+}
+
+.container-latest-products-title__container-mid {
+	display: flex;
+}
+
+.container-latest-products-title__container-mid a , .container-latest-products-title__second-container-mid a{
+	color: var(--color-8e9);
+	font-size: .8rem;
+	display: inline-block;
+	padding: 18px 25px;
+	border-radius: var(--radius);
+	transition: .3s;
+}
+
+.container-latest-products-title__container-mid a:not(:first-child):hover , .container-latest-products-title__second-container-mid a:not(:first-child):hover{
+	background-color: rgb(234, 234, 234);
+}
+
+.container-latest-products-title__container-mid a:first-child , .container-latest-products-title__second-container-mid a:first-child{
+	background-color: rgba(142,213,87,.08);
+	color: var(--base-color);
+}
+
+.container-latest-products-title__container-left{
+	position: relative;
+    background: var(--bgColor-f1);
+	display: flex;
+	align-items: center;
+	padding: 14px 20px 14px 15px;
+	border-radius: var(--radius);
+}
+
+.container-latest-products-title__container-left__nine-to-square {
+	display: grid;
+	grid-template-columns: repeat(3 , 1fr);
+	gap: 2px;
+}
+
+.container-latest-products-title__container-left__nine-to-square div{
+	background-color: var(--bgColor-c9);
+	width: 4px;
+	height: 4px;
+	border-radius: 1px;
+}
+
+.container-latest-products-title__container-left span{
+	color: var(--color-aa);
+    cursor: pointer;
+	font-size: .94rem;
+	margin: 0 20px 0 70px;
+}
+
+.container-latest-products-title__container-left i{
+	color: var(--color-aa);
+    cursor: pointer;
+	font-size: .94rem;
+}
+
+.container-latest-products-title__container-left__under-menu{
+	background-color: #fff;
+	box-shadow: 0 15px 50px rgb(173 188 200 / 22%);
+	position: absolute;
+	left: -1px;
+    right: 0;
+    top: 44px;
+	border-radius: var(--radius) ;
+	overflow: hidden;
+	transition: .4s;
+	opacity: 0 ;
+	visibility: hidden ;
+}
+
+.container-latest-products-title__container-left:hover .container-latest-products-title__container-left__under-menu{
+	top: 50px;
+	opacity: 1 ;
+	visibility: visible ;
+}
+
+.container-latest-products-title__container-left__under-menu a{
+	display: inline-block;
+	padding: 15px 23px;
+	font-size: .94rem;
+	color: var(--color-8e9);
+	width: 98%;
+	transition: .5s;
+}
+
+.container-latest-products-title__container-left__under-menu li:not(:first-child) a:hover{
+	background-color: var(--hover-Gray);
+}
+
+.container-latest-products-title__container-left__under-menu li:first-child a{
+	color: #fff;
+	background-color: var(--base-color);
+}
+
+.container-latest-products-title__second-container-mid{
+	display: none;
+}
+
+/* finish total-container-latest-products */
 
 @keyframes slider-show{
 	0% , 16%{
@@ -1491,6 +1610,16 @@ a{
 
 	.container-slider-show-bottom-link{
 		width: 25%;
+	}
+
+	.container-latest-products-title__container-mid{
+		display: none;
+	}
+
+	.container-latest-products-title__second-container-mid{
+		display: flex;
+		justify-content: center;
+		margin: 12px 0 40px;
 	}
 }
 
@@ -1741,8 +1870,15 @@ a{
 		padding: 0 15px 95px;
 	}
 
-	.total-container-slider-show{
+	.total-container-slider-show , .total-container-latest-products{
 		padding: 0 15px;
+	}
+}
+
+@media (max-width:550px){
+	main > .second-container:nth-child(4){
+		max-width: calc(100% - 30px);
+		margin: 60px 15px;
 	}
 }
 
@@ -1764,8 +1900,32 @@ a{
 	}
 }
 
+@media (max-width:509px){
+
+	.container-latest-products-title__container-left {
+		padding: 15px ;
+	}
+
+	.container-latest-products-title__container-left__nine-to-square , .container-latest-products-title__container-left span{
+		display: none;
+	}
+
+	.container-latest-products-title__second-container-mid{
+		overflow-x: scroll;
+		justify-content: flex-start;
+	}
+
+	.container-latest-products-title__second-container-mid a{
+		flex-shrink: 0;
+	}
+
+	.container-latest-products-title__container-left__under-menu{
+		right: -184px;
+	}
+}
+
 @media (max-width : 480px){
-	.container , .second-container{
+	.container , .second-container , main > .second-container:nth-child(4) , .container-latest-products-title__second-container-mid{
 		max-width: 360px;
 	}
 
@@ -1799,6 +1959,18 @@ a{
 
 	.container-slider-show-bottom-link a:last-child{
 		display: none;
+	}
+
+	.container-latest-products-title__container-right h2 {
+		font-size: 1rem;
+	}
+
+	main > .second-container:nth-child(4){
+		margin: 60px auto;
+	}
+
+	.container-latest-products-title__second-container-mid{
+		margin: 12px auto 40px;
 	}
 }
 
