--- a/homestyle.css
+++ b/homestyle.css
@@ -991,7 +991,7 @@ a{
 	text-align: center;
 }
 
-.sales-number span:last-child , .percentage-like span:last-child , .price span:last-child , .slider-show-sales-number span:last-child , .slider-show-percentage-like span:last-child{
+.sales-number span:last-child , .percentage-like span:last-child , .slider-show-sales-number span:last-child , .slider-show-percentage-like span:last-child{
 	font-size: .88rem;
     color: hsla(0,0%,42.7%,.8);
 	display: block;
@@ -1015,7 +1015,8 @@ a{
 }
 
 .price span:last-child{
-	display: inline;
+	font-size: .88rem;
+    color: hsla(0,0%,42.7%,.8);
 }
 
 .container-shopping-cart-and-Preview{
@@ -1071,6 +1072,7 @@ a{
 	width: 100%;
 	padding: 8px 16px;
 	flex-shrink: 0;
+	animation: slider-show 30s linear infinite alternate;
 }
 
 .container-slider-show__img {
@@ -1453,6 +1455,87 @@ a{
 
 /* finish total-container-latest-products */
 
+/* start total-container-the-most-popular-products */
+
+.second-container-for-common-style{
+	background-color: var(--bg-color);
+	padding: 40px 0;
+}
+
+.second-container-for-common-style .container-common-product__title__img{
+	background-color: hsla(0,0%,100%,.07);
+    color: hsla(0,0%,100%,.73);
+}
+
+.second-container-for-common-style .arrow-right{
+	background-color: hsla(0,0%,96.1%,.02);
+}
+
+.second-container-for-common-style .arrow-left{
+	background-color: hsla(0,0%,96.1%,.06);
+}
+
+.second-container-for-common-style .container-common__product h2 , .second-container-for-common-style .container-show-products__title h1 a , .second-container-for-common-style .price span:first-child{
+	color: #fff;
+}
+
+.second-container-for-common-style .container-common__show-products::before{
+	background: rgba(0,0,0,.03);
+	z-index: 0;
+}
+
+.second-container-for-common-style .container-show-product{
+	height: 432px;
+	background-color: var(--link-color) ;
+	box-shadow: none;
+}
+
+.second-container-for-common-style .container-show-products__title h1 a {
+	font-size: 1.1rem;
+}
+
+.second-container-for-common-style .container-show-products__title p{
+	color: var(--color-95);
+}
+
+.second-container-for-common-style .container-show-products__title p a ,  .second-container-for-common-style .container-sales-information__sales-details span:last-child {
+	color: hsla(0,0%,77.6%,.8);
+}
+
+.second-container-for-common-style .container-show-product__container-sales-information{
+	background-color: var(--link-color) ;
+}
+
+.second-container-for-common-style .container-sales-information {
+	border-top-color: hsla(0,0%,93.7%,.17);
+} 
+
+.second-container-for-common-style .container-sales-information__sales-details span:first-child{
+	font-size: 1rem;
+}
+
+.second-container-for-common-style .container-sales-information__sales-details div:not(:last-child) span:first-child{
+	font-weight: bold;
+	display: block;
+	text-align: center;
+}
+
+.second-container-for-common-style .container-sales-information__sales-details span:last-child{
+	display: block;
+	text-align: center; 
+	margin-top: 10px;
+}
+
+.second-container-for-common-style .preview {
+    background-color: rgba(0,0,0,.1) ;
+}
+
+.second-container-for-common-style .preview:hover {
+    background-color: rgba(0, 0, 0, 0.3) ;
+}
+
+/* start total-container-the-most-popular-products */
+
 @keyframes slider-show{
 	0% , 16%{
 		transform: translateX(0);
@@ -1573,7 +1656,7 @@ a{
 	.container-show-product h1{
 		height: fit-content;
 	}
-
+	
 	.container-show-product__container-sales-information {
 		top: 321px;
 	}
@@ -1683,6 +1766,10 @@ a{
 	
 	.container-new-products .container-show-product:hover .preview{
 		padding: 12px 16px;
+	}
+
+	.second-container-for-common-style .container-show-product{
+		height: 450px;
 	}
 
 }
@@ -1812,6 +1899,10 @@ a{
 		padding: 12px 18px;
 	}
 
+	.second-container-for-common-style .container-show-product{
+		height: 492px;
+	}
+
 }
 
 @media (max-width : 767px){
@@ -1935,6 +2026,10 @@ a{
 	.container-new-products .preview {
 		flex-grow: .5;
 	}
+
+	.second-container-for-common-style .container-show-product{
+		height: 516px;
+	}
 }
 
 @media (max-width : 575px){
@@ -2020,6 +2115,14 @@ a{
 	.shopping-cart a, .preview a {
 		font-size: .85rem;
 	}
+
+	.second-container-for-common-style .container-show-product{
+		height: 535px;
+	}
+
+	.second-container-for-common-style .container-show-product__container-sales-information , .second-container-for-common-style .container-show-product:hover .container-show-product__container-sales-information{
+		top: 342px;
+	}
 }
 
 @media (max-width:509px){
@@ -2066,6 +2169,10 @@ a{
 	.container-all-products__input-search{
 		width: 100%;
 	}
+
+	.container-sales-information__sales-details {
+		padding-right: 0;
+	}
 	
 	.shopping-cart, .container-show-product:hover .shopping-cart, .preview, .container-show-product:hover .preview {
 		padding: 14px 15px;
@@ -2102,9 +2209,37 @@ a{
 	.container-new-products .container-show-product__container-sales-information , .container-new-products .container-show-product:hover .container-show-product__container-sales-information { 
 		top: 295px;
 	}
+
+	.second-container-for-common-style{
+		padding: 40px 0 20px;
+	}
+
+	.second-container-for-common-style .container-show-product{
+		height: 505px;
+	}
+
+	.second-container-for-common-style .container-show-product__container-sales-information , .second-container-for-common-style .container-show-product:hover .container-show-product__container-sales-information{
+		top: 312px;
+	}
+}
+
+@media (max-width: 390px){
+	main > .second-container:nth-child(4){
+		width: calc(100% - 30px);
+		margin: 60px 15px;
+	}
 }
 
 @media (max-width: 380px) {
+
+	.total-container-special-products {
+		padding: 0 15px 95px 15px ;
+	}
+
+	.second-container-for-common-style{
+		padding: 40px 15px 20px;
+	}
+
 	.container-common__show-products::before{
 		display: none;
 	}
@@ -2115,7 +2250,7 @@ a{
 	}
 	
 	.shopping-cart, .container-show-product:hover .shopping-cart, .preview, .container-show-product:hover .preview {
-		padding: 14px 20px;
+		padding: 14px 18px;
 	}
 
 	.slider-show-AddToBasket {
@@ -2153,6 +2288,10 @@ a{
 		margin: 0 0 15px 0;
 	}
 
+	.container-slider-show__more-info {
+		padding: 20px 0 0;
+	}
+
 	.container-slider-show__more-info___container-AddToBasket-and-price__price {
 		justify-content: space-between;
 	}
@@ -2163,6 +2302,14 @@ a{
 
 	.container-new-products .container-show-product{
 		height: 512px;
+	}
+
+	.second-container-for-common-style .container-show-product{
+		height: 565px;
+	}
+
+	.second-container-for-common-style .container-show-product__container-sales-information , .second-container-for-common-style .container-show-product:hover .container-show-product__container-sales-information{
+		top: 310px;
 	}
 }
 
