--- a/homestyle.css
+++ b/homestyle.css
@@ -1608,6 +1608,15 @@ a{
 
 /* start container page builders */
 
+/* start the hottest formats similar to Digikala */
+
+.total-container-the-hottest-formats-similar-to-digikala{
+	margin-top: 70px;
+	/* border: 1px dashed rgba(173,188,199,.33); */
+}
+
+/* finish the hottest formats similar to Digikala */
+
 @keyframes slider-show{
 	0% , 16%{
 		transform: translateX(0);
@@ -2357,7 +2366,7 @@ a{
 		margin: 20px 0;
 	}
 
-	.total-container-the-hottest-page-builder-plugins .container-common__product__title h2 , .total-container-essential-plugins-to-increase-sales h2 , .total-container-the-best-multi-selling-templates-of-the-week h2{
+	.total-container-the-hottest-page-builder-plugins .container-common__product__title h2 , .total-container-essential-plugins-to-increase-sales h2 , .total-container-the-best-multi-selling-templates-of-the-week h2 , .total-container-the-hottest-formats-similar-to-digikala h2{
 		font-size: .95rem ;
 		line-height: 25px;
 	}
