--- a/homestyle.css
+++ b/homestyle.css
@@ -1612,10 +1612,84 @@ a{
 
 .total-container-the-hottest-formats-similar-to-digikala{
 	margin-top: 70px;
-	/* border: 1px dashed rgba(173,188,199,.33); */
 }
 
 /* finish the hottest formats similar to Digikala */
+
+/* start offers */
+
+.container-Offers{
+	display: flex;
+	border-top: 2px dashed rgba(173,188,199,.33);
+	padding: 70px 30px 90px 0;
+}
+
+.container-Offer{
+	background: rgba(247,248,250,.86);
+	border-radius: var(--radius);
+	width: 33%;
+	position: relative;
+}
+
+.container-Offer:nth-child(2){
+	margin: 0 66px;
+}
+
+.container-Offer__total-container-link{
+	display: block;
+	padding: 30px 50px 30px 10px;
+}
+
+.container-Offer__total-container-link__container-img{
+	padding: 16px;
+	width: fit-content;
+	border-radius: var(--radius);
+	position: absolute;
+	right: -30px;
+	top: calc(50% - 31.25px);
+}
+
+.container-Offer:nth-child(1) .container-Offer__total-container-link__container-img{
+	background-image: linear-gradient(180deg,#a1c5fd,#85adfa);
+    box-shadow: 0 2px 15px rgb(152 189 252 / 54%);
+}
+
+.container-Offer:nth-child(2) .container-Offer__total-container-link__container-img{
+	background-image: linear-gradient(180deg,#fecf6c,#ffbe70);
+    box-shadow: 0 2px 15px rgb(254 206 108 / 65%);
+}
+
+.container-Offer:nth-child(3) .container-Offer__total-container-link__container-img{
+	background-image: linear-gradient(180deg,#aae181,#89d351);
+    box-shadow: 0 2px 15px rgb(137 211 81 / 43%);
+}
+
+
+.container-Offer__total-container-link__title{
+	color: var(--color-4d);
+	word-spacing: -4px;
+	font-size: 1.06rem;
+	margin-bottom: 15px;
+}
+
+.container-Offer__total-container-link__title i{
+	color: var(--color-bf);
+	font-size: 13px;
+	margin-right: 8px;
+	transition: .4s;
+}
+
+.container-Offer:hover .container-Offer__total-container-link__title i{
+	margin-right: 17px;
+	color: #b7b8ba ;
+}
+
+.container-Offer__total-container-link__description{
+	color: var(--color-8e9);
+	font-size: .88rem;
+}
+
+/* finish offers */
 
 @keyframes slider-show{
 	0% , 16%{
@@ -1665,6 +1739,25 @@ a{
 		top: 235px;
 	}
 
+}
+
+@media (max-width : 1225px){
+	.container-Offers{
+		flex-wrap: wrap;
+		justify-content: space-between;
+	}
+
+	.container-Offer{
+		width: 48%;
+	}
+
+	.container-Offer:nth-child(2){
+		margin: 0 ;
+	}
+
+	.container-Offer:nth-child(3){
+		margin-top: 30px ;
+	}
 }
 
 @media (max-width : 1288px){
@@ -1997,6 +2090,17 @@ a{
 		padding: 60px;
 	}
 
+	.container-Offer{
+		width: 100%;
+	}
+
+	.container-Offer:nth-child(2){
+		margin: 20px 0 ;
+	}
+
+	.container-Offer:nth-child(3){
+		margin-top: 0 ;
+	}
 }
 
 @media (max-width : 767px){
@@ -2183,6 +2287,10 @@ a{
 	.container-page-builders{
 		padding: 0 15px;
 	}
+
+	.total-container-Offers{
+		padding: 0 15px;
+	}
 }
 
 @media (max-width:550px){
@@ -2330,6 +2438,14 @@ a{
 		column-gap: 0;
 		row-gap: 20px;
 	}
+
+	.container-Offer__total-container-link__title {
+		font-size: .9rem;
+	}
+
+	.container-Offer__total-container-link__description{
+		font-size: .75rem;
+	}
 }
 
 @media (max-width: 390px){
@@ -2337,6 +2453,7 @@ a{
 		width: calc(100% - 30px);
 		margin: 60px 15px;
 	}
+
 }
 
 @media (max-width: 380px) {
@@ -2426,6 +2543,10 @@ a{
 	.second-container-for-common-style .container-show-product__container-sales-information , .second-container-for-common-style .container-show-product:hover .container-show-product__container-sales-information{
 		top: 310px;
 	} */
+
+	.container-Offer__total-container-link__description{
+		line-height: 23px;
+	}
 }
 
 @media (max-width : 320px){
